# tap-shopify-partner

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_shopify_partner/: client.py  streams.py  tap.py
tap_shopify_partner/tests/: __init__.py  test_core.py  test_streams.py
